Возможность скоролла платьев. Альфа 0.01

--- a/style.css
+++ b/style.css
@@ -15,3 +15,5 @@
 @import url("./blocks/model/neck.css");
 @import url("./blocks/model/chest_belly.css");
 @import url("./blocks/model/legs.css");
+
+@import url("./blocks/swiper.css");
