--- a/blocks/model/model.css
+++ b/blocks/model/model.css
@@ -1,11 +1,12 @@
 .model{
-    max-width: 320px;
+    width: 320px;
     height: 100%;
-    flex-shrink: 0;
 
     margin: 0 auto;
     padding: 0;
     
     display: none;
     position: relative;
+    flex-direction: column;
+    justify-content: center;
 }
