--- a/blocks/model/neck.css
+++ b/blocks/model/neck.css
@@ -1,6 +1,6 @@
 .neck{
-    max-width: 100%;
-    max-height: 35px;
+    max-width: 175px;
+    max-height: 60px;
     object-fit: contain;
     
     /*
