beta 0.01 - Удалил меню, на её месте теперь будут гифки(пока одна). За место отдельно страницы теперь высплывающие окошко

--- a/blocks/model/girl.css
+++ b/blocks/model/girl.css
@@ -3,7 +3,7 @@
     min-width: 175px;
     min-height: 500px;
 
-    background-image: url("../../image/model-0.png");
+    background-image: url("../../image/model-0.jpg");
     background-size: contain;
     background-repeat: no-repeat;
 
