--- a/blocks/dresses/dress.css
+++ b/blocks/dresses/dress.css
@@ -1,11 +1,11 @@
 .dress{
-    width: 100%;
-    height: 100%;
+    width: 170px;
+    height: 250px;
     
-    margin: 0;
+    margin: 50px auto;
     padding: 0; 
 
-    background-image: url("../../image/model-0.png");
+    background-image: url("../../image/dress.gif");
     background-size: cover;
 
     display: flex;
