--- a/blocks/dresses/dresses.css
+++ b/blocks/dresses/dresses.css
@@ -2,16 +2,16 @@
     max-width: 310px;
     flex-shrink: 0;
 
-    border-radius: 25px;
-    background: #D9D9D9;
     margin: 0 auto;
     padding: 0;
 
-    display: grid;
+    display: flex;
+    position: relative;
+   /* display: grid;
     position: relative;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 150px 150px 150px;
-    gap: 5px;
+    gap: 5px;*/
 
     
 }
