--- a/blocks/model/model.css
+++ b/blocks/model/model.css
@@ -2,7 +2,7 @@
     width: 250px;
     height: 600px;
 
-    background-color: #F2F2F2;
+    background-color: #EAEAEA;
     border-radius: 25px;
     margin: 0 auto;
     padding: 0;
