--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 @import url("./blocks/dresses/dresses.css");
 @import url("./blocks/dresses/dresses_close.css");
 @import url("./blocks/dresses/dress.css");
+@import url("./blocks/dresses/Lada.css");
+@import url("./blocks/dresses/Sonya.css");
 @import url("./blocks/dresses/open-model.css");
 
 @import url("./blocks/model/model.css");
