Криво, но добавил Сашино платье

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 @import url("./blocks/dresses/dress.css");
 @import url("./blocks/dresses/Lada.css");
 @import url("./blocks/dresses/Sonya.css");
+@import url("./blocks/dresses/Sasha.css");
 @import url("./blocks/dresses/open-model.css");
 
 @import url("./blocks/model/model.css");
