--- a/blocks/dresses/Lada.css
+++ b/blocks/dresses/Lada.css
@@ -1,4 +1,6 @@
 .Lada{
-    margin-top: 150px;
-    background-image: url("../../image/Lada.gif");
+    width: 150px;
+    height: 300px;
+    right: 0;
+    /* background-color: purple; */
 }
