--- a/blocks/dresses/Sasha.css
+++ b/blocks/dresses/Sasha.css
@@ -1,5 +1,9 @@
 .Sasha{
-    flex-wrap: wrap;
-    background-image: url("../../image/Sasha_legs-0.png");
-    margin-top: 200px;
+    width: 150px;
+    height: 350px;
+    right: 75px;
+    top: 80px;
+    /* background-color: rgba(100, 100, 100, .5); */
+
+    z-index: 2;
 }
