--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 @import url("./blocks/dresses/dresses.css");
 @import url("./blocks/dresses/dresses_close.css");
 @import url("./blocks/dresses/dress.css");
+@import url("./blocks/dresses/livitation.css");
 @import url("./blocks/dresses/Lada.css");
 @import url("./blocks/dresses/Sonya.css");
 @import url("./blocks/dresses/Sasha.css");
