--- a/blocks/model/model_close_button.css
+++ b/blocks/model/model_close_button.css
@@ -13,6 +13,7 @@
     top: 10px;
 
     background-image: url("../../image/Close.png");
+    background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
     fill: #FFF;
