--- a/blocks/header/header_img.css
+++ b/blocks/header/header_img.css
@@ -2,7 +2,7 @@
     display: flex;
     position: relative;
 
-    margin: 5% auto 10% 5%;
+    margin: 5% auto 10vh 5%;
     padding: 0;
     max-width: 75px;
     max-height: 75px;
