--- a/style.css
+++ b/style.css
@@ -22,4 +22,8 @@
 @import url("./blocks/model/chest_belly.css");
 @import url("./blocks/model/legs.css");
 
+@import url("./blocks/contacts/contacts.css");
+@import url("./blocks/contacts/contacts__title.css");
+@import url("./blocks/contacts/contacts__vk.css");
+
 @import url("./blocks/swiper.css");
