--- a/blocks/contacts/contacts__title.css
+++ b/blocks/contacts/contacts__title.css
@@ -1,12 +1,14 @@
 .contacts__title{
     display: flex;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 
     color: #000;
     font-family: Arial;
-    font-size: 40px;
+    font-size: 39px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+
+    text-align: center;
 }
