--- a/blocks/contacts/contacts__vk.css
+++ b/blocks/contacts/contacts__vk.css
@@ -4,10 +4,10 @@
     background-position: center;
     background-size: contain;
 
-    width: 304.47px;
-    height: 53px;
+    width: 300px;
+    height: 52px;
     flex-shrink: 0;
-    margin: 0;
+    margin: 50px auto;
     padding: 0;
 
     display: flex;
